--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: clusterip-service
+  name: clusterip-service-v2
+  namespace: njood-ns
 spec:
   selector:
     app: nginx-v2
