--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -21,4 +21,15 @@ spec:
           ports:
             - containerPort: 80
               protocol: TCP
+          env:
+          - name: HEADER_COLOR
+            valueFrom:
+              configMapKeyRef:
+                name: application-config
+                key: header_color
+            - name: BODY_COLOR
+              valueFrom:
+                configMapKeyRef:
+                  name: application-config
+                  key: body_color
       restartPolicy: Always
