--- a/manifests/db.yaml
+++ b/manifests/db.yaml
@@ -31,6 +31,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: njood-wordpress
+  namespace: njood-ns
   labels:
     app: wordpress
 spec:
