--- a/manifests/db-pvc.yaml
+++ b/manifests/db-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pv-claim
+  name: db-pvc
   namespace: njood-ns
   labels:
     app: wordpress
