--- a/manifests/wordpress-pv.yaml
+++ b/manifests/wordpress-pv.yaml
@@ -3,6 +3,8 @@ kind: PersistentVolumeClaim
 metadata:
   name: mysql-pvc
   namespace: njood-ns
+  labels:
+    app: wordpress
 spec:
   storageClassName: ""
   volumeName: foo-pv
@@ -12,6 +14,8 @@ kind: PersistentVolume
 metadata:
   name: mysql-pv
   namespace: njood-ns
+  labels:
+    app: wordpress
 spec:
   storageClassName: ""
   claimRef:
