--- a/manifests/db-deployment.yaml
+++ b/manifests/db-deployment.yaml
@@ -45,4 +45,4 @@ spec:
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
-          claimName: mysql-pv
+          claimName: mysql-pvc
